fix: changed to better dark mode blue

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@
 
 :root {
   --primary: #0072de;
-  --primary-dark: #4A9FFF;
+  --primary-dark: #3e91ff;
   --dark: #080A0B;
   --gray: #9A9FA6;
   --bg-light: #FFFFFF;
